corpus/class/constModifier.txt
================================================================================
constModifier
================================================================================

class MyClass {
    const myProp: String = "hello"
}

--------------------------------------------------------------------------------

(module
  (clazz
    (identifier)
    (classBody
      (classProperty
        (modifier)
        (identifier)
        (typeAnnotation
          (type
            (qualifiedIdentifier
              (identifier))))
        (slStringLiteral
          (slStringLiteralPart))))))
