corpus/module/moduleHeader4.txt
================================================================================
moduleHeader4
================================================================================

@ModuleInfo { minPklVersion = "0.21.1" }
module com.apple.foo

extends "foo.pkl"

import "bar.pkl"

--------------------------------------------------------------------------------

(module
  (moduleHeader
    (annotation
      (qualifiedIdentifier
        (identifier))
      (objectBody
        (objectProperty
          (identifier)
          (slStringLiteral))))
    (moduleClause
      (qualifiedIdentifier
        (identifier)
        (identifier)
        (identifier)))
    (extendsOrAmendsClause
      (stringConstant)))
  (importClause
    (stringConstant)))
