corpus/snippetTests/annotation/annotation5.txt
================================================================================
annotation/annotation5
================================================================================

integer: Int = 1

@integer someProperty: String = "hi"

--------------------------------------------------------------------------------

(module
  (classProperty
    (identifier)
    (typeAnnotation
      (type
        (qualifiedIdentifier
          (identifier))))
    (intLiteral))
  (classProperty
    (annotation
      (qualifiedIdentifier
        (identifier)))
    (identifier)
    (typeAnnotation
      (type
        (qualifiedIdentifier
          (identifier))))
    (slStringLiteral)))
