corpus/snippetTests/annotation/annotationIsNotExpression2.txt
================================================================================
annotation/annotationIsNotExpression2
================================================================================

class Ann1 extends Annotation

class Ann2 extends Annotation

@Ann1|Ann2
foo = 1

--------------------------------------------------------------------------------

(module
  (clazz
    (identifier)
    (classExtendsClause
      (qualifiedIdentifier
        (identifier))))
  (clazz
    (identifier)
    (classExtendsClause
      (qualifiedIdentifier
        (identifier))))
  (classProperty
    (annotation
      (qualifiedIdentifier
        (identifier)))
    (ERROR
      (identifier))
    (identifier)
    (intLiteral)))
